# online-cinema

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  crud.py  database.py  main.py  models.py  notes_file.txt  pyproject.toml  requirements.txt  schemas.py  security.py  settings.py  test.py  utils.py
alembic/: env.py
alembic/versions/: 0ea554eb8979_add_new_authentication.py  3a8f56e2c34c_create_users_and_films_tables.py  47199f40c272_add_is_active_column_to_users.py  549fdd022bf3_add_new_column_to_user_table.py  92bbaa7453eb_add_role_to_user.py
mail_service/: email_service.py
routers/: auth.py  movies.py  users.py
tests/: test_auth.py  test_crud.py  test_email_service.py  test_users.py
